# shop_core

./: README.md  pyproject.toml  settings.toml
alembic/: env.py
alembic/versions/: 00d380e01c01_create_orders_tables.py  0cb8d9ab4e6e_add_reviews_table.py  27505a70ce3b_create_cart_and_catalog_tables2.py  54f440b82c71_merge_heads.py  7c1e6978b6cb_create_cart_and_catalog_tables.py  99fd5337f0c9_init.py  a1b2c3d4e5f6_create_promotions_tables.py  cc70047ba97e_increase_string_lengths.py
app/: docker-compose.yml  main.py
app/auth/: api.py  schemas.py  service.py
app/cart/: api.py  enum.py  models.py  repository.py  schemas.py  service.py
app/catalog/: api.py  models.py  repository.py  schemas.py  service.py
app/core/: config.py  db.py  security.py
app/orders/: api.py  models.py  repository.py  schemas.py  service.py
app/promotions/: api.py  models.py  repository.py  schemas.py  service.py
app/reviews/: crud.py  models.py  router.py  schemas.py
app/users/: api.py  enum.py  models.py  repository.py  schemas.py  service.py
docs/: er-model.puml  use_case.puml  use_case.txt
reports/: report_Borovtsov_Nikolay.md  report_Hohlatov_Aleksandr.md  report_MaksimovichKirill.md  report_Maslennikov_Dmitry.md  report_Svetnikov_Maksim.md
scripts/:  create_db.py  create_db.py
tests/: conftest.py
tests/auth/: test_auth_api.py
tests/cart/: test_cart.py
tests/catalog/: test_catalog.py
tests/orders/: test_orders.py
tests/promotions/: test_promotions_api.py
tests/reviews/: test_reviews.py
tests/users/: test_users_api.py
