[tool.poetry]
name = "shop-core"
version = "0.1.0"
description = ""
authors = ["Dmitry Maslennikov <maslennikov.da@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.122.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
asyncpg = "^0.31.0"
alembic = "^1.17.2"
dynaconf = "^3.2.12"
passlib = "^1.7.4"
jose = "^1.0.0"
python-jose = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
